--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,12 @@ cache: pip
 
 install:
   - make install
+  - pip install coveralls
 
 before_script:
   - psql -c "CREATE ROLE timed LOGIN PASSWORD 'timed';" -U postgres
   - psql -c "CREATE DATABASE test_timed;" -U postgres
 
 script: make test
+
+after_success: coveralls
