--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 
 before_script:
   - psql -c "CREATE ROLE timed LOGIN PASSWORD 'timed';" -U postgres
-  - psql -c "CREATE DATABASE test_timed;" -U postgres
+  - psql -c "CREATE DATABASE test_timed OWNER timed;" -U postgres
 
 script: make test
 
