Added more tests

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,5 +1,12 @@
 [run]
-source=timed_api,timed
+source=timed_api
 
 [report]
-omit=*/migrations/*.py,*/tests/*.py
+omit=*/migrations/*.py,*/apps.py,*/admin.py
+exclude_lines =
+    pragma: no cover
+    def __str__
+    def __unicode__
+    def __repr__
+
+show_missing = True
