--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ember-cli-postcss": "2.1.1",
     "ember-cli-qunit": "^2.0.0",
     "ember-cli-release": "^0.2.9",
+    "ember-cli-sauce": "1.6.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-template-lint": "0.4.12",
     "ember-cli-test-loader": "^1.1.0",
