--- a/.travis.yml
+++ b/.travis.yml
@@ -3,31 +3,17 @@ language: node_js
 node_js:
   - "4"
 
-env:
-  global:
-    - CXX=g++-4.8
-    - SAUCE_USERNAME=adsy-timed
-    - SAUCE_ACCESS_Key=2ce2a4cf-10cb-4af8-9429-3506d16b3a35
-
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - g++-4.8
-
 sudo: false
 
 cache:
   directories:
     - node_modules
+    - bower_components
 
 before_install:
   - npm config set spin false
   - npm install -g bower
-  - bower --version
   - npm install phantomjs-prebuilt
-  - node_modules/phantomjs-prebuilt/bin/phantomjs --version
 
 install:
   - npm install
@@ -41,3 +27,16 @@ script:
 
 after_script:
   - ember sauce:disconnect
+
+env:
+  global:
+    - CXX=g++-4.8
+    - SAUCE_USERNAME=adsy-timed
+    - SAUCE_ACCESS_Key=2ce2a4cf-10cb-4af8-9429-3506d16b3a35
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
