--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "broccoli-asset-rev": "^2.4.2",
     "broccoli-funnel": "^1.0.3",
     "broccoli-postcss-single": "^1.0.0",
+    "coveralls": "^2.11.12",
     "ember-ajax": "2.4.1",
     "ember-cli": "2.7.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
+    "ember-cli-code-coverage": "0.2.2",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-eslint": "1.7.0",
     "ember-cli-htmlbars": "^1.0.10",
@@ -34,7 +36,7 @@
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-moment-shim": "2.0.0",
     "ember-cli-postcss": "2.1.1",
-    "ember-cli-qunit": "^2.0.0",
+    "ember-cli-qunit": "^2.1.0",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sauce": "1.6.0",
     "ember-cli-sri": "^2.1.0",
