--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
     "ember": "2.7.0",
     "ember-cli-shims": "~0.1.1",
     "ember-qunit-notifications": "0.1.0",
-    "adcssy": "adfinis-sygroup/adcssy#v0.9.1",
+    "adcssy": "adfinis-sygroup/adcssy#0.9.1",
     "font-awesome": "~4.5.0",
     "pikaday": "^1.4.0"
   }
