--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
   - pip install coveralls
 
 before_script:
+  - cp timed/config.sample.ini timed/config.ini
   - psql -c "CREATE ROLE timed CREATEDB LOGIN PASSWORD 'timed';" -U postgres
 
 script: make test
