Use rtd for docs

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ cache: pip
 install:
   - make install-dev
   - pip install coveralls
-  - pip install travis-sphinx
 
 before_script:
   - cp timed/config.sample.ini timed/config.ini
@@ -19,8 +18,5 @@ before_script:
 
 script:
   - make test
-  - travis-sphinx build
 
-after_success:
-  - coveralls
-  - travis-sphinx deploy
+after_success: coveralls
