--- a/timed/config.sample.ini
+++ b/timed/config.sample.ini
@@ -1,7 +1,7 @@
 [ldap]
 AUTH_LDAP_SERVER_URI       = ldap://localhost:389
 AUTH_LDAP_BIND_DN          = uid=Administrator,cn=users,dc=example,dc=com
-AUTH_LDAP_PASSWORD         = **********
+AUTH_LDAP_PASSWORD         = univention
 AUTH_LDAP_USER_DN_TEMPLATE = uid=%%(user)s,cn=users,dc=example,dc=com
 
 [github]
