Simplify travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,6 @@ before_script:
   - cp timed/config.sample.ini timed/config.ini
   - psql -c "CREATE ROLE timed CREATEDB LOGIN PASSWORD 'timed';" -U postgres
 
-script:
-  - make test
+script: make test
 
 after_success: coveralls
