--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server --proxy http://localhost:8000",
-    "test": "ember test"
+    "test": "ember test",
+    "docs": "ember ember-cli-yuidoc"
   },
   "repository": "",
   "engines": {
@@ -19,54 +20,52 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "babel-eslint": "^6.1.2",
     "broccoli-asset-rev": "^2.4.2",
-    "broccoli-funnel": "^1.0.3",
     "coveralls": "^2.11.12",
-    "ember-ajax": "2.4.1",
-    "ember-cli": "2.7.0",
-    "ember-cli-app-version": "^1.0.0",
+    "ember-adcssy": "adfinis-sygroup/ember-adcssy#master",
+    "ember-ajax": "2.5.3",
+    "ember-cli": "2.10.0",
+    "ember-cli-app-version": "^2.0.1",
     "ember-cli-babel": "^5.1.6",
-    "ember-cli-code-coverage": "0.2.2",
+    "ember-cli-code-coverage": "0.3.10",
     "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-eslint": "1.7.0",
+    "ember-cli-eslint": "3.0.2",
     "ember-cli-htmlbars": "^1.0.10",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.0",
-    "ember-cli-moment-shim": "2.0.0",
-    "ember-cli-postcss": "3.0.4",
-    "ember-cli-qunit": "^2.1.0",
-    "ember-cli-release": "^0.2.9",
+    "ember-cli-mirage": "0.2.4",
+    "ember-cli-moment-shim": "3.0.1",
+    "ember-cli-postcss": "3.0.5",
+    "ember-cli-qunit": "^3.1.0",
+    "ember-cli-release": "^1.0.0-beta.2",
+    "ember-cli-sass": "6.1.1",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-style-lint": "0.1.4",
-    "ember-cli-template-lint": "0.4.12",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-component-css": "^0.2.0-beta.5",
-    "ember-composable-helpers": "1.0.0",
+    "ember-cli-yuidoc": "0.8.7",
+    "ember-component-css": "0.2.9",
+    "ember-composable-helpers": "1.1.2",
     "ember-computed-decorators": "0.2.2",
-    "ember-data": "^2.7.0",
+    "ember-data": "^2.10.0",
     "ember-export-application-global": "^1.0.5",
-    "ember-font-awesome": "2.1.1",
-    "ember-highcharts": "0.4.4",
-    "ember-load-initializers": "^0.5.1",
-    "ember-moment": "7.0.0-beta.3",
-    "ember-notify": "5.1.0",
-    "ember-pad": "1.2.1",
-    "ember-pikaday": "2.1.0",
-    "ember-power-select": "1.0.0-beta.6",
+    "ember-font-awesome": "2.2.0",
+    "ember-load-initializers": "^0.6.3",
+    "ember-moment": "7.3.0",
+    "ember-notify": "5.2.0",
+    "ember-pad": "1.2.2",
+    "ember-power-select": "1.0.3",
     "ember-resolver": "^2.0.3",
-    "ember-route-action-helper": "0.3.3",
-    "ember-simple-auth": "1.1.0",
+    "ember-route-action-helper": "2.0.1",
+    "ember-simple-auth": "1.2.0-beta.1",
     "ember-sy": "github:adfinis-sygroup/ember-sy#v1.0.0",
-    "ember-truth-helpers": "1.2.0",
-    "highcharts": "4.2.6",
-    "liquid-fire": "0.24.1",
+    "ember-truth-helpers": "1.3.0",
+    "eslint-plugin-ember-suave": "^1.0.0",
+    "liquid-fire": "0.27.0",
     "loader.js": "^4.0.1",
-    "pagination-pager": "2.4.1",
+    "pagination-pager": "2.4.2",
     "postcss-cssnext": "^2.7.0",
+    "postcss-easy-import": "^2.0.0",
     "postcss-import": "^8.1.2",
-    "stylelint-config-standard": "^12.0.0",
-    "ui-ember-slider": "0.3.7"
+    "yuidoc-adsy-theme": "^1.1.1"
   }
 }
