--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ember-cli-mirage": "0.2.4",
     "ember-cli-mocha": "0.13.2",
     "ember-cli-moment-shim": "3.0.1",
+    "ember-cli-nouislider": "0.11.0",
     "ember-cli-postcss": "3.0.5",
     "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-sass": "6.1.1",
@@ -69,7 +70,6 @@
     "eslint-plugin-ember-suave": "^1.0.0",
     "liquid-fire": "0.27.0",
     "loader.js": "^4.1.0",
-    "pagination-pager": "2.4.2",
     "postcss-cssnext": "^2.7.0",
     "postcss-easy-import": "^2.0.0",
     "postcss-import": "^8.1.2",
