Added some tests

--- a/package.json
+++ b/package.json
@@ -24,22 +24,22 @@
     "broccoli-asset-rev": "^2.4.2",
     "coveralls": "^2.11.12",
     "ember-adcssy": "adfinis-sygroup/ember-adcssy#master",
-    "ember-ajax": "2.5.3",
+    "ember-ajax": "2.5.4",
     "ember-cli": "2.11.0",
     "ember-cli-app-version": "^2.0.1",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-chai": "0.3.2",
-    "ember-cli-code-coverage": "0.3.10",
+    "ember-cli-code-coverage": "0.3.11",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-eslint": "3.0.2",
     "ember-cli-htmlbars": "^1.1.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.0",
-    "ember-cli-mirage": "0.2.4",
+    "ember-cli-mirage": "0.2.5",
     "ember-cli-mocha": "0.13.2",
     "ember-cli-moment-shim": "3.0.1",
     "ember-cli-nouislider": "0.11.0",
-    "ember-cli-postcss": "3.0.5",
+    "ember-cli-postcss": "3.1.1",
     "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-sass": "6.1.1",
     "ember-cli-shims": "^1.0.2",
@@ -47,9 +47,9 @@
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-cli-yuidoc": "0.8.7",
-    "ember-component-css": "0.2.9",
-    "ember-composable-helpers": "1.1.2",
-    "ember-computed-decorators": "0.2.2",
+    "ember-component-css": "0.2.11",
+    "ember-composable-helpers": "2.0.0",
+    "ember-computed-decorators": "0.3.0",
     "ember-data": "^2.11.0",
     "ember-export-application-global": "^1.0.5",
     "ember-font-awesome": "2.2.0",
@@ -58,11 +58,10 @@
     "ember-moment": "7.3.0",
     "ember-notify": "5.2.0",
     "ember-pad": "1.2.2",
-    "ember-percy": "1.2.5",
-    "ember-power-select": "1.0.3",
+    "ember-power-select": "1.4.3",
     "ember-resolver": "^2.0.3",
-    "ember-route-action-helper": "2.0.1",
-    "ember-simple-auth": "1.2.0-beta.1",
+    "ember-route-action-helper": "2.0.2",
+    "ember-simple-auth": "1.2.0",
     "ember-source": "^2.11.0",
     "ember-sy": "github:adfinis-sygroup/ember-sy#v1.0.0",
     "ember-test-selectors": "0.2.1",
@@ -72,7 +71,7 @@
     "loader.js": "^4.1.0",
     "postcss-cssnext": "^2.7.0",
     "postcss-easy-import": "^2.0.0",
-    "postcss-import": "^8.1.2",
+    "postcss-import": "^9.1.0",
     "yuidoc-adsy-theme": "^1.1.1"
   }
 }
