--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ember-composable-helpers": "2.0.0",
     "ember-computed-decorators": "0.3.0",
     "ember-data": "^2.11.0",
+    "ember-exam": "0.6.0",
     "ember-export-application-global": "^1.0.5",
     "ember-font-awesome": "2.2.0",
     "ember-load-initializers": "^0.6.3",
@@ -66,7 +67,9 @@
     "ember-sy": "github:adfinis-sygroup/ember-sy#v1.0.0",
     "ember-test-selectors": "0.2.1",
     "ember-truth-helpers": "1.3.0",
+    "eslint-plugin-ember": "^2.1.1",
     "eslint-plugin-ember-suave": "^1.0.0",
+    "eslint-plugin-object-literal-jsdoc": "^1.0.0",
     "liquid-fire": "0.27.0",
     "loader.js": "^4.1.0",
     "postcss-cssnext": "^2.7.0",
