--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "babel-eslint": "^7.1.1",
     "broccoli-asset-rev": "^2.4.2",
     "coveralls": "^2.11.12",
-    "ember-adcssy": "adfinis-sygroup/ember-adcssy#master",
+    "ember-adcssy": "adfinis-sygroup/ember-adcssy#v1.1.2",
     "ember-ajax": "2.5.4",
     "ember-cli": "2.11.0",
     "ember-cli-app-version": "^2.0.1",
