--- a/.travis.yml
+++ b/.travis.yml
@@ -32,3 +32,5 @@ after_script:
 env:
   global:
     - COVERAGE=true
+    - SAUCE_USERNAME=adsy-timed
+    - SAUCE_ACCESS_KEY=2ce2a4cf-10cb-4af8-9429-3506d16b3a35
