--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_script:
   - ember sauce:connect
 
 script:
-  - ember test --test-port 7000
+  - npm test
 
 after_script:
   - ember sauce:disconnect
