--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ cache:
 before_install:
   - npm config set spin false
   - npm install -g bower
+  - npm install -g coveralls
   - npm install phantomjs-prebuilt
 
 install:
@@ -27,8 +28,10 @@ script:
 
 after_script:
   - ember sauce:disconnect
-  - cat coverage/lcov.info | ./node_modules/.bin/coveralls
+  - cat coverage/lcov.info | coveralls
 
 env:
   global:
     - COVERAGE=true
+    - SAUCE_USERNAME=adsy-timed
+    - SAUCE_ACCESS_KEY=2ce2a4cf-10cb-4af8-9429-3506d16b3a35
