--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ cache:
     - bower_components
 
 before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH=$HOME/.yarn/bin:$PATH
   - npm config set spin false
   - npm install -g bower
   - npm install phantomjs-prebuilt
