--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "babel-eslint": "^7.1.1",
     "broccoli-asset-rev": "^2.4.2",
-    "coveralls": "2.12.0",
+    "coveralls": "~2.11.16",
     "ember-adcssy": "adfinis-sygroup/ember-adcssy#v1.1.4",
     "ember-ajax": "2.5.5",
     "ember-basic-dropdown": "0.30.2",
