Better task selection

--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "adcssy": "adfinis-sygroup/adcssy#0.9.1",
     "font-awesome": "^4.7.0",
-    "nouislider": "^8.0.1"
+    "nouislider": "^8.0.1",
+    "corejs-typeahead": "adfinis-forks/typeahead.js#master"
   }
 }
