--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "coveralls": "~2.11.16",
     "ember-adcssy": "adfinis-sygroup/ember-adcssy#v1.1.4",
     "ember-ajax": "2.5.5",
+    "ember-aupac-typeahead": "2.2.0",
     "ember-basic-dropdown": "0.30.2",
     "ember-changeset": "1.2.3",
     "ember-changeset-validations": "1.2.6",
@@ -64,7 +65,6 @@
     "ember-notify": "5.2.0",
     "ember-pad": "1.2.2",
     "ember-power-calendar": "0.3.1",
-    "ember-power-select": "1.4.4",
     "ember-resolver": "^2.0.3",
     "ember-route-action-helper": "2.0.2",
     "ember-simple-auth": "1.2.0",
