--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "ember-font-awesome": "3.0.3",
     "ember-load-initializers": "^0.6.3",
     "ember-mocha": "0.11.0",
-    "ember-moment": "7.3.0",
+    "ember-moment": "github:stefanpenner/ember-moment#master",
     "ember-native-dom-helpers": "0.3.5",
     "ember-notify": "5.2.0",
     "ember-pad": "1.2.2",
@@ -70,7 +70,7 @@
     "ember-simple-auth": "1.2.0",
     "ember-source": "^2.11.2",
     "ember-sy": "github:adfinis-sygroup/ember-sy#v1.0.0",
-    "ember-test-selectors": "0.2.1",
+    "ember-test-selectors": "0.3.4",
     "ember-truth-helpers": "1.3.0",
     "ember-wormhole": "0.5.1",
     "eslint-plugin-ember": "^3.0.1",
