--- a/package.json
+++ b/package.json
@@ -21,61 +21,65 @@
   "license": "MIT",
   "devDependencies": {
     "babel-eslint": "^7.1.1",
+    "babel-plugin-transform-async-generator-functions": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
     "broccoli-asset-rev": "^2.4.2",
-    "coveralls": "~2.11.16",
+    "coveralls": "~2.13.1",
     "ember-adcssy": "adfinis-sygroup/ember-adcssy#v1.1.4",
-    "ember-ajax": "2.5.5",
+    "ember-ajax": "3.0.0",
     "ember-aupac-typeahead": "2.2.0",
-    "ember-basic-dropdown": "0.30.2",
-    "ember-changeset": "1.2.3",
-    "ember-changeset-validations": "1.2.6",
-    "ember-cli": "2.11.1",
-    "ember-cli-app-version": "^2.0.1",
-    "ember-cli-babel": "^5.2.4",
-    "ember-cli-chai": "0.3.2",
-    "ember-cli-code-coverage": "0.3.11",
-    "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-eslint": "3.0.2",
-    "ember-cli-htmlbars": "^1.1.1",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.3",
+    "ember-basic-dropdown": "0.32.8",
+    "ember-changeset": "1.3.0",
+    "ember-changeset-validations": "1.2.7",
+    "ember-cli": "2.13.2",
+    "ember-cli-app-version": "^3.0.0",
+    "ember-cli-babel": "^6.4.1",
+    "ember-cli-chai": "0.4.2",
+    "ember-cli-code-coverage": "0.3.12",
+    "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-eslint": "4.0.0",
+    "ember-cli-htmlbars": "^2.0.2",
+    "ember-cli-htmlbars-inline-precompile": "^0.4.3",
     "ember-cli-inject-live-reload": "^1.4.0",
-    "ember-cli-mirage": "0.3.0-beta.5",
-    "ember-cli-mocha": "0.13.2",
-    "ember-cli-moment-shim": "3.0.1",
-    "ember-cli-nouislider": "0.11.0",
-    "ember-cli-postcss": "3.1.1",
+    "ember-cli-mirage": "^0.3.3",
+    "ember-cli-mocha": "^0.14.4",
+    "ember-cli-moment-shim": "3.3.1",
+    "ember-cli-nouislider": "0.13.0",
+    "ember-cli-postcss": "3.4.1",
     "ember-cli-release": "^1.0.0-beta.2",
-    "ember-cli-sass": "6.1.1",
+    "ember-cli-sass": "6.2.0",
     "ember-cli-sauce": "2.0.0",
     "ember-cli-shims": "^1.0.2",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-test-loader": "^1.1.0",
+    "ember-cli-test-loader": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-cli-yuidoc": "0.8.7",
-    "ember-component-css": "0.2.11",
-    "ember-composable-helpers": "2.0.0",
+    "ember-cli-yuidoc": "0.8.8",
+    "ember-component-css": "0.3.4",
+    "ember-composable-helpers": "2.0.2",
     "ember-computed-decorators": "0.3.0",
     "ember-data": "^2.11.1",
-    "ember-export-application-global": "^1.0.5",
-    "ember-font-awesome": "3.0.3",
-    "ember-load-initializers": "^0.6.3",
-    "ember-mocha": "0.11.0",
+    "ember-export-application-global": "^2.0.0",
+    "ember-font-awesome": "3.0.5",
+    "ember-load-initializers": "^1.0.0",
+    "ember-mocha": "0.12.0",
     "ember-moment": "github:stefanpenner/ember-moment#master",
-    "ember-native-dom-helpers": "0.3.5",
-    "ember-notify": "5.2.0",
+    "ember-native-dom-helpers": "0.5.0",
+    "ember-notify": "5.2.1",
     "ember-pad": "1.2.2",
-    "ember-power-calendar": "0.3.1",
-    "ember-resolver": "^2.0.3",
-    "ember-route-action-helper": "2.0.2",
-    "ember-simple-auth": "1.2.0",
+    "ember-power-calendar": "0.5.0",
+    "ember-resolver": "^4.1.0",
+    "ember-route-action-helper": "2.0.3",
+    "ember-simple-auth": "1.3.0",
     "ember-source": "^2.11.2",
     "ember-sy": "github:adfinis-sygroup/ember-sy#v1.0.0",
     "ember-test-selectors": "0.3.4",
     "ember-truth-helpers": "1.3.0",
-    "ember-wormhole": "0.5.1",
+    "ember-wormhole": "0.5.2",
     "eslint-plugin-ember": "^3.0.1",
     "eslint-plugin-ember-suave": "^1.0.0",
-    "liquid-fire": "0.27.0",
+    "liquid-fire": "0.27.3",
     "loader.js": "^4.1.0",
     "postcss-cssnext": "^2.7.0",
     "yuidoc-adsy-theme": "^1.1.1"
