--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.4.1",
     "ember-cli-chai": "0.4.2",
-    "ember-cli-code-coverage": "0.3.12",
+    "ember-cli-code-coverage": "github:kategengler/ember-cli-code-coverage#aa099053af65d7b6b87dc97a17a6b13a1df5bc5d",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-eslint": "4.0.0",
     "ember-cli-htmlbars": "^2.0.2",
@@ -63,7 +63,7 @@
     "ember-font-awesome": "3.0.5",
     "ember-load-initializers": "^1.0.0",
     "ember-mocha": "0.12.0",
-    "ember-moment": "github:stefanpenner/ember-moment#master",
+    "ember-moment": "github:stefanpenner/ember-moment#3dad2079ddc8e3239256017ed498640a150baa9e",
     "ember-native-dom-helpers": "0.5.0",
     "ember-notify": "5.2.1",
     "ember-pad": "1.2.2",
