--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "ember-sy": "github:adfinis-sygroup/ember-sy#v1.0.0",
     "ember-test-selectors": "0.3.4",
     "ember-truth-helpers": "1.3.0",
+    "ember-validated-form": "^0.4.0",
     "ember-wormhole": "0.5.2",
     "eslint-plugin-ember": "^3.0.1",
     "eslint-plugin-ember-suave": "^1.0.0",
