--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,8 @@ djangorestframework-jsonapi==2.2.0
 djangorestframework-jwt==1.10.0
 psycopg2>=2.7,<2.8
 pytz==2017.2
+pyexcel-webio==0.1.2
+pyexcel-io==0.4.2
+django-excel==0.0.9
+pyexcel-ods3==0.4.0
+pyexcel-xlsx==0.4.1
