--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "ember-notify": "5.2.1",
     "ember-pad": "1.2.2",
     "ember-power-calendar": "0.5.0",
+    "ember-power-datepicker": "^0.3.0",
     "ember-resolver": "^4.1.0",
     "ember-route-action-helper": "2.0.3",
     "ember-simple-auth": "1.3.0",
@@ -81,6 +82,7 @@
     "eslint-plugin-ember-suave": "^1.0.0",
     "liquid-fire": "0.27.3",
     "loader.js": "^4.1.0",
+    "pagination-pager": "^3.0.0",
     "postcss-cssnext": "^2.7.0",
     "yuidoc-adsy-theme": "^1.1.1"
   }
