--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: python
 
-env:
-  - ENV=travis
-
 python:
   - "3.5.2"
 
@@ -15,6 +12,7 @@ cache:
     - .hypothesis
 
 install:
+  - echo "ENV=travis" > .env
   - make install-dev
   - pip install coveralls
 
