Check that migrations are created if necessary

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
 
 before_script:
   - psql -c "CREATE ROLE timed CREATEDB LOGIN PASSWORD 'timed';" -U postgres
+  - psql -c "CREATE DATABASE timed;" -U postgres
 
 script: make test
 
