--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,6 @@
   "dependencies": {
     "adcssy": "adfinis-sygroup/adcssy#0.9.2",
     "font-awesome": "^4.7.0",
-    "nouislider": "^8.0.1",
-    "corejs-typeahead": "adfinis-forks/typeahead.js#master"
+    "nouislider": "^8.0.1"
   }
 }
