--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "adcssy": "adfinis-sygroup/adcssy#0.9.2",
     "font-awesome": "^4.7.0",
     "nouislider": "^8.0.1",
-    "corejs-typeahead": "adfinis-forks/typeahead.js#master"
+    "corejs-typeahead": "adfinis-forks/typeahead.js#master",
+    "hopscotch": "~0.2.8"
   }
 }
