--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "ember-resolver": "^4.1.0",
     "ember-route-action-helper": "2.0.3",
     "ember-simple-auth": "1.3.0",
+    "ember-site-tour": "^1.0.0",
     "ember-source": "^2.11.2",
     "ember-sy": "github:adfinis-sygroup/ember-sy#v1.0.0",
     "ember-test-selectors": "0.3.4",
