--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,21 @@
 version: '2'
 services:
   db:
-    image: postgres
+    image: postgres:9.4
     ports:
       - '5432:5432'
     environment:
       - POSTGRES_USER=timed
       - POSTGRES_PASSWORD=timed
+  ucs:
+    image: univention/ucs-master-amd64:4.2-1
+    hostname: timed-ucs
+    expose:
+      - 80
+      - 389
+    volumes:
+      - ./docker/ucs/timed-ucs.profile:/var/cache/univention-system-setup/profile
+      - ./docker/ucs/scripts:/usr/ucs/scripts
   backend:
     build: .
     ports:
@@ -15,6 +24,7 @@ services:
       - .:/app
     depends_on:
       - db
+      - ucs
     environment:
       - DATABASE_URL=psql://timed:timed@db:5432/timed
       - ENV=docker
