Update dependencies and resolve issues and deprecations

--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "timed",
   "dependencies": {
-    "adcssy": "adfinis-sygroup/adcssy#0.9.2",
+    "adcssy": "adfinis-sygroup/adcssy#0.10.0",
     "font-awesome": "^4.7.0",
-    "nouislider": "^8.0.1",
-    "hopscotch": "~0.2.8"
+    "nouislider": "^10.1.0",
+    "hopscotch": "^0.3.1"
   }
 }
