--- a/.travis.yml
+++ b/.travis.yml
@@ -3,29 +3,29 @@ language: node_js
 node_js:
   - "6"
 
-addons:
-  firefox: "latest"
-  chrome: "stable"
-
 sudo: false
+dist: trusty
+
+addons:
+  firefox: latest
+  chrome: stable
 
 cache:
-  yarn: true
   directories:
+    - $HOME/.npm
     - node_modules
     - bower_components
 
 before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash
-  - export PATH=$HOME/.yarn/bin:$PATH
-  - yarn global add bower
+  - npm config set spin false
+  - npm install -g bower
 
 install:
-  - yarn install
+  - npm install
   - bower install
 
 script:
-  - COVERAGE=true ember test
+  - COVERAGE=true npm test
 
 after_script:
   - cat coverage/lcov.info | coveralls
