--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server --proxy http://localhost:8000",
-    "test": "ember test",
-    "docs": "ember ember-cli-yuidoc"
+    "test": "ember test"
   },
   "repository": "",
   "engines": {
@@ -21,78 +20,75 @@
   "license": "MIT",
   "devDependencies": {
     "@html-next/vertical-collection": "^1.0.0-beta.7",
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "^8.0.0",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.5.2",
     "broccoli-asset-rev": "^2.4.2",
     "coveralls": "~2.13.1",
-    "ember-adcssy": "adfinis-sygroup/ember-adcssy#v1.1.4",
+    "ember-adcssy": "github:adfinis-sygroup/ember-adcssy#v1.1.4",
     "ember-ajax": "3.0.0",
-    "ember-basic-dropdown": "0.32.8",
-    "ember-changeset": "1.3.0",
-    "ember-changeset-validations": "1.2.7",
-    "ember-cli": "2.13.2",
+    "ember-basic-dropdown": "^0.33.5",
+    "ember-changeset": "^1.3.0",
+    "ember-changeset-validations": "^1.2.8",
+    "ember-cli": "^2.15.1",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.4.1",
-    "ember-cli-chai": "0.4.2",
-    "ember-cli-code-coverage": "github:kategengler/ember-cli-code-coverage#aa099053af65d7b6b87dc97a17a6b13a1df5bc5d",
+    "ember-cli-chai": "^0.4.2",
+    "ember-cli-code-coverage": "^0.4.1",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-dotenv": "^1.2.0",
-    "ember-cli-eslint": "4.0.0",
+    "ember-cli-eslint": "^4.2.0",
     "ember-cli-htmlbars": "^2.0.2",
-    "ember-cli-htmlbars-inline-precompile": "^0.4.3",
+    "ember-cli-htmlbars-inline-precompile": "^0.4.4",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-mirage": "^0.3.3",
     "ember-cli-mocha": "^0.14.4",
-    "ember-cli-moment-shim": "3.3.1",
-    "ember-cli-nouislider": "0.13.0",
-    "ember-cli-postcss": "3.4.1",
+    "ember-cli-moment-shim": "^3.5.0",
+    "ember-cli-nouislider": "^0.13.0",
+    "ember-cli-postcss": "^3.5.2",
     "ember-cli-release": "^1.0.0-beta.2",
-    "ember-cli-sass": "6.2.0",
+    "ember-cli-sass": "^7.0.0",
     "ember-cli-shims": "^1.0.2",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-cli-yuidoc": "0.8.8",
-    "ember-component-css": "0.3.4",
-    "ember-composable-helpers": "2.0.2",
-    "ember-computed-decorators": "0.3.0",
-    "ember-data": "^2.11.1",
+    "ember-component-css": "^0.3.5",
+    "ember-composable-helpers": "^2.0.3",
+    "ember-computed-decorators": "^0.3.0",
+    "ember-data": "^2.15.0",
     "ember-export-application-global": "^2.0.0",
-    "ember-font-awesome": "3.0.5",
+    "ember-font-awesome": "^3.0.5",
     "ember-load-initializers": "^1.0.0",
     "ember-math-helpers": "^2.2.3",
-    "ember-mocha": "0.12.0",
-    "ember-moment": "github:stefanpenner/ember-moment#3dad2079ddc8e3239256017ed498640a150baa9e",
-    "ember-native-dom-helpers": "0.5.0",
-    "ember-notify": "5.2.1",
+    "ember-mocha": "^0.12.0",
+    "ember-moment": "^7.4.1",
+    "ember-native-dom-helpers": "^0.5.4",
+    "ember-notify": "^5.2.1",
     "ember-one-way-controls": "^2.0.1",
-    "ember-pad": "1.2.2",
-    "ember-power-calendar": "0.5.0",
-    "ember-power-datepicker": "^0.3.0",
+    "ember-pad": "^1.2.2",
+    "ember-power-calendar": "^0.5.0",
     "ember-power-select": "^1.9.5",
     "ember-resolver": "^4.1.0",
     "ember-responsive": "^2.0.4",
-    "ember-route-action-helper": "2.0.3",
-    "ember-simple-auth": "1.3.0",
+    "ember-route-action-helper": "^2.0.6",
+    "ember-simple-auth": "^1.4.0",
     "ember-site-tour": "^1.0.0",
-    "ember-source": "^2.11.2",
+    "ember-source": "^2.15.0",
     "ember-sy": "github:adfinis-sygroup/ember-sy#v1.0.0",
-    "ember-test-selectors": "0.3.4",
+    "ember-test-selectors": "^0.3.7",
     "ember-tether": "^1.0.0-beta.0",
-    "ember-truth-helpers": "1.3.0",
-    "ember-validated-form": "^0.4.0",
-    "ember-wormhole": "0.5.2",
+    "ember-truth-helpers": "^1.3.0",
+    "ember-validated-form": "^0.5.3",
+    "ember-wormhole": "^0.5.2",
     "eslint-config-prettier": "^2.3.0",
-    "eslint-plugin-ember": "^3.0.1",
+    "eslint-plugin-ember": "^4.5.0",
     "eslint-plugin-ember-suave": "^1.0.0",
     "eslint-plugin-prettier": "^2.1.2",
-    "liquid-fire": "0.27.3",
     "loader.js": "^4.1.0",
     "pagination-pager": "^3.0.0",
-    "postcss-cssnext": "^2.7.0",
-    "prettier": "^1.5.3",
-    "yuidoc-adsy-theme": "^1.1.1"
+    "postcss-cssnext": "^3.0.2",
+    "prettier": "^1.5.3"
   }
 }
