--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "timed",
   "version": "0.4.0",
-  "description": "Small description for timed goes here",
-  "private": true,
+  "description": "A time tracking software written in Ember.js",
   "directories": {
-    "doc": "doc",
     "test": "tests"
   },
   "scripts": {
@@ -12,12 +10,12 @@
     "start": "ember server --proxy http://localhost:8000",
     "test": "ember test"
   },
-  "repository": "",
+  "repository": "https://github.com/adfinis-sygroup/timed-frontend",
   "engines": {
-    "node": ">= 0.10.0"
+    "node": "^4.5 || 6.* || >= 7.*"
   },
-  "author": "",
-  "license": "MIT",
+  "author": "Adfinis SyGroup AG <info@adfinis-sygroup.ch>",
+  "license": "AGPL-3.0",
   "devDependencies": {
     "@html-next/vertical-collection": "^1.0.0-beta.7",
     "babel-eslint": "^8.0.0",
@@ -25,16 +23,16 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.5.2",
-    "broccoli-asset-rev": "^2.4.2",
-    "coveralls": "~2.13.1",
+    "broccoli-asset-rev": "^2.4.5",
+    "coveralls": "^2.13.1",
     "ember-adcssy": "github:adfinis-sygroup/ember-adcssy#v1.1.4",
-    "ember-ajax": "3.0.0",
+    "ember-ajax": "^3.0.0",
     "ember-basic-dropdown": "^0.33.5",
     "ember-changeset": "^1.3.0",
     "ember-changeset-validations": "^1.2.8",
     "ember-cli": "^2.15.1",
     "ember-cli-app-version": "^3.0.0",
-    "ember-cli-babel": "^6.4.1",
+    "ember-cli-babel": "^6.6.0",
     "ember-cli-chai": "^0.4.2",
     "ember-cli-code-coverage": "^0.4.1",
     "ember-cli-dependency-checker": "^2.0.0",
@@ -42,7 +40,7 @@
     "ember-cli-eslint": "^4.2.0",
     "ember-cli-htmlbars": "^2.0.2",
     "ember-cli-htmlbars-inline-precompile": "^0.4.4",
-    "ember-cli-inject-live-reload": "^1.4.0",
+    "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-mirage": "^0.3.3",
     "ember-cli-mocha": "^0.14.4",
     "ember-cli-moment-shim": "^3.5.0",
@@ -50,14 +48,14 @@
     "ember-cli-postcss": "^3.5.2",
     "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-sass": "^7.0.0",
-    "ember-cli-shims": "^1.0.2",
+    "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-component-css": "^0.3.5",
     "ember-composable-helpers": "^2.0.3",
     "ember-computed-decorators": "^0.3.0",
-    "ember-data": "^2.15.0",
+    "ember-data": "~2.14.0",
     "ember-export-application-global": "^2.0.0",
     "ember-font-awesome": "^3.0.5",
     "ember-load-initializers": "^1.0.0",
@@ -76,7 +74,7 @@
     "ember-simple-auth": "^1.4.0",
     "ember-site-tour": "^1.0.0",
     "ember-source": "^2.15.0",
-    "ember-sy": "github:adfinis-sygroup/ember-sy#v1.0.0",
+    "ember-sy": "^1.1.1",
     "ember-test-selectors": "^0.3.7",
     "ember-tether": "^1.0.0-beta.0",
     "ember-truth-helpers": "^1.3.0",
