--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^2.1.0",
-    "ember-cli-uglify": "^1.2.0",
+    "ember-cli-uglify-es": "^1.0.4",
     "ember-component-css": "^0.3.5",
     "ember-composable-helpers": "^2.0.3",
     "ember-computed-decorators": "^0.3.0",
