--- a/package.json
+++ b/package.json
@@ -56,9 +56,11 @@
     "ember-component-css": "^0.3.5",
     "ember-composable-helpers": "^2.0.3",
     "ember-computed-decorators": "^0.3.0",
+    "ember-content-placeholders": "^0.5.0",
     "ember-data": "~2.14.0",
     "ember-export-application-global": "^2.0.0",
     "ember-font-awesome": "^3.0.5",
+    "ember-gsap": "^0.3.3",
     "ember-load-initializers": "^1.0.0",
     "ember-math-helpers": "^2.2.3",
     "ember-mocha": "^0.12.0",
@@ -67,6 +69,7 @@
     "ember-notify": "^5.2.1",
     "ember-one-way-controls": "^2.0.1",
     "ember-pad": "^1.2.2",
+    "ember-parachute": "^0.3.2",
     "ember-power-calendar": "^0.5.0",
     "ember-power-select": "^1.9.5",
     "ember-resolver": "^4.1.0",
