--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "babel-preset-env": "^1.6.1",
     "broccoli-asset-rev": "^2.4.5",
     "coveralls": "^3.0.0",
-    "ember-adcssy": "github:adfinis-sygroup/ember-adcssy#v1.1.4",
+    "ember-adcssy": "^1.2.1",
     "ember-ajax": "^3.0.0",
     "ember-basic-dropdown": "^0.33.6",
     "ember-can": "^0.8.5",
@@ -63,13 +63,14 @@
     "ember-font-awesome": "^3.0.5",
     "ember-load-initializers": "^1.0.0",
     "ember-math-helpers": "^2.2.3",
+    "ember-maybe-import-regenerator": "^0.1.6",
     "ember-mocha": "^0.12.0",
     "ember-moment": "^7.4.1",
     "ember-native-dom-helpers": "^0.5.4",
     "ember-notify": "^5.2.1",
     "ember-one-way-controls": "^3.0.1",
     "ember-pad": "^1.2.2",
-    "ember-parachute": "github:offirgolan/ember-parachute#a4e126bc84c9afdb0cbf0168c0d4ff8c79d6e3df",
+    "ember-parachute": "^0.3.5",
     "ember-power-calendar": "^0.5.0",
     "ember-power-select": "^1.9.11",
     "ember-resolver": "^4.1.0",
@@ -78,7 +79,6 @@
     "ember-simple-auth": "^1.4.0",
     "ember-site-tour": "^1.1.0",
     "ember-source": "^2.16.0",
-    "ember-sy": "^1.1.1",
     "ember-test-selectors": "^0.3.7",
     "ember-tether": "^1.0.0-beta.0",
     "ember-truth-helpers": "^2.0.0",
@@ -92,6 +92,8 @@
     "loader.js": "^4.1.0",
     "pagination-pager": "^3.1.0",
     "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^11.0.0",
+    "postcss-responsive-type": "^1.0.0",
     "prettier": "^1.7.4"
   }
 }
