--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "ember-component-css": "^0.3.5",
     "ember-composable-helpers": "^2.0.3",
     "ember-computed-decorators": "^0.3.0",
+    "ember-concurrency": "^0.8.12",
     "ember-data": "~2.16.3",
     "ember-export-application-global": "^2.0.0",
     "ember-font-awesome": "^3.0.5",
