--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "Adfinis SyGroup AG <info@adfinis-sygroup.ch>",
   "license": "AGPL-3.0",
   "devDependencies": {
-    "@html-next/vertical-collection": "^1.0.0-beta.9",
+    "@html-next/vertical-collection": "github:html-next/vertical-collection#5c4fc6b18c75ec161eee39622dd0c068bff735f2",
     "babel-eslint": "^8.0.1",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
