--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server --proxy http://localhost:8000",
-    "test": "ember test",
-    "coveralls": "cat coverage/lcov.info | coveralls"
+    "test": "ember test"
   },
   "repository": "https://github.com/adfinis-sygroup/timed-frontend",
   "engines": {
@@ -25,7 +24,6 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "broccoli-asset-rev": "^2.4.5",
-    "coveralls": "^3.0.0",
     "ember-adcssy": "^1.2.1",
     "ember-ajax": "^3.0.0",
     "ember-basic-dropdown": "^0.33.6",
