--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "postcss-responsive-type": "^1.0.0",
     "prettier": "^1.7.4"
   },
-  "greenkeper": {
+  "greenkeeper": {
     "ignore": [
       "ember-cli-htmlbars-inline-precompile",
       "ember-cli-mirage"
