--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "broccoli-asset-rev": "^2.4.5",
+    "downloadjs": "^1.4.7",
     "ember-adcssy": "^1.2.1",
     "ember-ajax": "^3.0.0",
     "ember-basic-dropdown": "^0.33.6",
@@ -58,7 +59,9 @@
     "ember-concurrency": "^0.8.12",
     "ember-data": "~2.16.3",
     "ember-export-application-global": "^2.0.0",
+    "ember-fetch": "^3.4.3",
     "ember-font-awesome": "^3.0.5",
+    "ember-in-viewport": "^2.1.1",
     "ember-load-initializers": "^1.0.0",
     "ember-math-helpers": "^2.2.3",
     "ember-maybe-import-regenerator": "^0.1.6",
@@ -74,6 +77,7 @@
     "ember-resolver": "^4.1.0",
     "ember-responsive": "^2.0.5",
     "ember-route-action-helper": "^2.0.6",
+    "ember-scrollable": "^0.4.9",
     "ember-simple-auth": "^1.4.0",
     "ember-site-tour": "^1.1.0",
     "ember-source": "^2.16.0",
