--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,20 @@ addons:
 cache:
   yarn: true
 
+before_install:
+  - yarn global add greenkeeper-lockfile@1
+
 install:
   - yarn
 
+before_script:
+  - greenkeeper-lockfile-update
+
 script:
   - yarn test
+
+after_script:
+  - greenkeeper-lockfile-upload
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
