Use intersection observer instead of ember-in-viewport

--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "ember-export-application-global": "^2.0.0",
     "ember-fetch": "^3.4.3",
     "ember-font-awesome": "^3.0.5",
-    "ember-in-viewport": "^2.1.1",
     "ember-load-initializers": "^1.0.0",
     "ember-math-helpers": "^2.2.3",
     "ember-maybe-import-regenerator": "^0.1.6",
@@ -90,6 +89,7 @@
     "eslint-plugin-ember": "^4.5.0",
     "eslint-plugin-ember-suave": "^1.0.0",
     "eslint-plugin-prettier": "^2.1.2",
+    "intersection-observer": "^0.4.3",
     "loader.js": "^4.1.0",
     "pagination-pager": "^3.1.0",
     "postcss-cssnext": "^3.0.2",
