Add test to authenticate with ldap backend

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,7 @@
 [pytest]
 DJANGO_SETTINGS_MODULE=timed.settings
 addopts = --reuse-db
+env =
+  DJANGO_AUTH_LDAP_ENABLED=True
+  DJANGO_AUTH_LDAP_SERVER_URI=ldap://127.0.0.1
+  DJANGO_AUTH_LDAP_USER_DN_TEMPLATE=uid=%(user)s,ou=people,o=test
