--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ cache:
   yarn: true
 
 before_install:
+  - export PATH=$PATH:`yarn global bin`
   - yarn global add greenkeeper-lockfile@1
 
 install:
