--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "ember-ajax": "^3.0.0",
     "ember-basic-dropdown": "^1.0.2",
     "ember-can": "^1.1.1",
-    "ember-changeset": "^1.3.0",
-    "ember-changeset-validations": "^1.2.8",
-    "ember-cli": "^3.3.0",
+    "ember-changeset": "^1.5.0",
+    "ember-changeset-validations": "^1.3.1",
+    "ember-cli": "~2.18.0",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.6.0",
     "ember-cli-chai": "^0.5.0",
@@ -57,7 +57,7 @@
     "ember-composable-helpers": "^2.0.3",
     "ember-computed-decorators": "^0.3.0",
     "ember-concurrency": "^0.8.12",
-    "ember-data": "~2.17.0",
+    "ember-data": "~2.18.0",
     "ember-export-application-global": "^2.0.0",
     "ember-fetch": "^5.1.1",
     "ember-font-awesome": "^3.0.5",
@@ -79,7 +79,7 @@
     "ember-scrollable": "^0.5.0",
     "ember-simple-auth": "^1.4.0",
     "ember-site-tour": "^1.1.0",
-    "ember-source": "^2.16.0",
+    "ember-source": "~2.18.0",
     "ember-test-selectors": "^1.0.0",
     "ember-tether": "^1.0.0-beta.0",
     "ember-truth-helpers": "^2.0.0",
