--- a/.travis.yml
+++ b/.travis.yml
@@ -7,19 +7,21 @@ services:
   - postgresql
 
 cache:
-  - pip
-  - directories:
+  pip: true
+  directories:
     - .hypothesis
 
 install:
   - echo "ENV=travis" > .env
-  - make install-dev
+  - pip install --upgrade -r requirements.txt -r requirements-dev.txt
 
 before_script:
   - psql -c "CREATE ROLE timed CREATEDB LOGIN PASSWORD 'timed';" -U postgres
   - psql -c "CREATE DATABASE timed;" -U postgres
 
-script: make test
+script:
+  - flake8
+  - pytest --no-cov-on-fail --cov --create-db
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
