Add caching layer for update installation
Includes additional ignores of files not be included

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,16 @@
+.cache
+.coverage
+.coverage.*
+docker-compose.*
+Dockerfile
+.dockerignore
+.env
 .git
-docker-compose.yml
-docker
+*.pyc
+__pycache__
+*.pyd
+*.pyo
+.pytest_cache
+.Python
+.python-version
 *.swp
