Enforce deprecation warning to be an error
When updating dependencies this will trigger when new deprecation warning
are introduced before it gets merged.
In case of a warning which can not be fixed it can still be added to
pytest.ini and comment why it is excluded.

For this to work fixed all current deprecation warnings.

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,22 @@ env =
   DJANGO_AUTH_LDAP_ENABLED=True
   DJANGO_AUTH_LDAP_SERVER_URI=ldap://127.0.0.1
   DJANGO_AUTH_LDAP_USER_DN_TEMPLATE=uid=%(user)s,ou=people,o=test
+filterwarnings =
+    error::DeprecationWarning
+    error::PendingDeprecationWarning
+
+    # ignore rest_framework_jwt deprecation warning which is not fixiable
+    # but simply a information
+    ignore:The following fields will be removed in the future:DeprecationWarning
+
+    # TODO: adjust frontend for this change to work
+    ignore:PageNumberPagination is deprecated. Use JsonApiPageNumberPagination instead.
+
+    # This warning is caused by rest_conditions
+    # TODO: replace rest_conditions with composable permission classes
+    # https://www.django-rest-framework.org/community/3.9-announcement/#composable-permission-classes
+    ignore:Using user\.is_authenticated\(\) and user\.is_anonymous\(\)
+
+    # ignore pytest-freezegun warning till following PR is released
+    # https://github.com/ktosiek/pytest-freezegun/pull/4
+    ignore:MarkInfo objects are deprecated as they contain merged marks which are hard to deal with correctly.
