Make random data more readable (#356)
uuid4 is used in factories to avoid errors in tests with unique constraints.
Drawback of this is that the random data is really hard to read.

To fix the unique constraint issue a fix seed is introduced and factory
can therefore create more readable data.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 DJANGO_SETTINGS_MODULE=timed.settings
-addopts = --reuse-db
+addopts = --reuse-db --randomly-seed=1521188767 --randomly-dont-reorganize
 env =
   DJANGO_AUTH_LDAP_ENABLED=True
   DJANGO_AUTH_LDAP_SERVER_URI=ldap://127.0.0.1
