--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,4 @@
+-r requirements.txt
 coverage==4.5.2
 factory-boy==2.11.1
 flake8==3.5.0
@@ -13,7 +14,8 @@ isort==4.3.4
 mockldap==0.3.0
 pytest==4.0.1
 pytest-cov==2.6.0
-pytest-env==0.6.2
-pytest-mock==1.10.0
 pytest-django==3.4.4
+pytest-env==0.6.2
 pytest-freezegun==0.3.0.post1
+pytest-mock==1.10.0
+pytest-randomly==1.2.3
