--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "author": "Adfinis SyGroup AG <info@adfinis-sygroup.ch>",
   "license": "AGPL-3.0",
   "devDependencies": {
-    "@html-next/vertical-collection": "github:html-next/vertical-collection#5c4fc6b18c75ec161eee39622dd0c068bff735f2",
+    "@html-next/vertical-collection":
+      "github:html-next/vertical-collection#5c4fc6b18c75ec161eee39622dd0c068bff735f2",
     "babel-eslint": "^8.0.1",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -32,7 +33,7 @@
     "ember-changeset": "^1.5.0",
     "ember-changeset-validations": "^1.3.1",
     "ember-cli": "~2.18.0",
-    "ember-cli-app-version": "^3.0.0",
+    "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^6.6.0",
     "ember-cli-chai": "^0.5.0",
     "ember-cli-chart": "^3.4.0",
@@ -96,9 +97,6 @@
     "prettier": "^1.7.4"
   },
   "greenkeeper": {
-    "ignore": [
-      "ember-cli-htmlbars-inline-precompile",
-      "ember-cli-mirage"
-    ]
+    "ignore": ["ember-cli-htmlbars-inline-precompile", "ember-cli-mirage"]
   }
 }
