--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "Adfinis SyGroup AG <info@adfinis-sygroup.ch>",
   "license": "AGPL-3.0",
   "devDependencies": {
-    "@html-next/vertical-collection": "github:html-next/vertical-collection#5c4fc6b18c75ec161eee39622dd0c068bff735f2",
+    "@html-next/vertical-collection": "v1.0.0-beta.13",
     "babel-eslint": "^8.0.1",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -73,11 +73,11 @@
     "ember-power-calendar": "^0.7.3",
     "ember-power-select": "^2.0.9",
     "ember-resolver": "^5.0.1",
-    "ember-responsive": "^2.0.5",
+    "ember-responsive": "^3.0.0-beta.3",
     "ember-route-action-helper": "^2.0.6",
     "ember-scrollable": "^0.5.0",
     "ember-simple-auth": "~1.7.0",
-    "ember-site-tour": "^1.1.0",
+    "ember-site-tour": "^2.0.1",
     "ember-source": "~3.0.0",
     "ember-test-selectors": "^1.0.0",
     "ember-tether": "^1.0.0-beta.0",
@@ -97,9 +97,6 @@
     "sass": "^1.15.2"
   },
   "greenkeeper": {
-    "ignore": [
-      "ember-cli-htmlbars-inline-precompile",
-      "ember-cli-mirage"
-    ]
+    "ignore": ["ember-cli-htmlbars-inline-precompile", "ember-cli-mirage"]
   }
 }
