Introduce contribution guidelines
* Introduces pre-commit to simplify contribution
* Fixes docker container to install dev dependencies on dev machine

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,6 +1,10 @@
 version: "3"
 services:
   backend:
+    build:
+      context: .
+      args:
+        REQUIREMENTS: requirements-dev.txt
     environment:
       - PYTHONDONTWRITEBYTECODE=1
     volumes:
