chore: add docker setup

--- a/contrib/nginx.conf
+++ b/contrib/nginx.conf
@@ -2,16 +2,54 @@ server {
     listen 80 default_server;
     listen [::]:80 default_server;
 
+    resolver 127.0.0.11;
+
     root /var/www/html;
 
     server_name _;
+
+    # https://github.com/mailhog/MailHog/issues/117
+    chunked_transfer_encoding on;
+    proxy_set_header X-NginX-Proxy true;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_http_version 1.1;
+    proxy_redirect off;
+    proxy_buffering off;
+
+    location / {
+        add_header Cache-Control 'private, max-age=86400';
+        try_files $uri $uri/ /index.html?/$request_uri;
+    }
 
     location /index.html {
         expires epoch;
         add_header Cache-Control 'private, no-store, must-revalidate, max-age=0';
     }
 
-    location / {
-        try_files $uri $uri/ /index.html?/$request_uri;
+    location ~* "^/assets/.*-[a-z0-9]{32}\.(?:css|js|png|svg|jpe?g)$" {
+        add_header Cache-Control 'public, max-age=365000000, immutable';
+    }
+
+    location ~* "^/assets/.*\.(?:css|js|png|jpe?g)$" {
+        expires 1w;
+        add_header Cache-Control 'public, max-age=604800';
+    }
+
+    location /assets {
+        expires 1w;
+        add_header Cache-Control 'public, max-age=604800';
+    }
+
+    location ~ ^/mailhog/ {
+        set $mailhog http://mailhog:8025;
+        proxy_pass $mailhog;
+    }
+
+    location ~ ^/api/ {
+        set $django http://backend;
+        proxy_pass $django;
     }
 }
