chore(deps): update various dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 python-dateutil==2.8.1
-django==2.2.10 # pyup: <3.0
-django-auth-ldap==2.1.0
+django==2.2.12
+django-auth-ldap==2.1.1
 # might remove this once we find out how the jsonapi extras_require work
 django-filter==2.2.0
 django-multiselectfield==0.1.12
@@ -16,6 +16,6 @@ pyexcel-ods3==0.5.3
 pyexcel-xlsx==0.5.8
 pyexcel-ezodf==0.3.4
 django-environ==0.4.5
-django-money==1.0
+django-money==1.1
 python-redmine==2.2.1
 uwsgi==2.0.18
