feat(auth): implement oidc authentication
Implement OIDC-based authentication using `mozilla-django-oidc`.
Additionally to the default ModelBackend (used for django-admin),
we subclass the Mozilla OIDC backend and customize it for our needs.
That is, we accept two kinds of OIDC flows:
 * authorization code (using a public client)
 * client credentials grant (using a confidential client).

The first is the accepted for the timed-frontend, the latter is used for
server-to-server communication by services consuming the timed api.

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.7"
 
 services:
   backend:
@@ -14,6 +14,8 @@ services:
     volumes:
       - ./:/app
     command: /bin/sh -c "wait-for-it.sh -t 60 db:5432 -- ./manage.py migrate && ./manage.py runserver 0.0.0.0:80"
+    networks:
+      - timed.local
 
   mailhog:
     image: mailhog/mailhog
@@ -21,3 +23,5 @@ services:
       - 8025:8025
     environment:
       - MH_UI_WEB_PATH=mailhog
+    networks:
+      - timed.local
