--- a/dev-config/nginx.conf
+++ b/dev-config/nginx.conf
@@ -14,7 +14,7 @@ server {
   client_max_body_size 50m;
 
   # db-flush may not be exposed in PRODUCTION!
-  location ~ ^/(api|admin|db-flush)/ {
+  location ~ ^/(api|admin|static|db-flush)/ {
     set $backend http://backend;
     proxy_pass $backend;
   }
