--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.7"
 
 services:
   db:
@@ -10,6 +10,8 @@ services:
     environment:
       - POSTGRES_USER=timed
       - POSTGRES_PASSWORD=timed
+    networks:
+      - timed.local
 
   frontend:
     image: adfinissygroup/timed-frontend:latest
@@ -17,6 +19,8 @@ services:
       - backend
     ports:
       - 4200:80
+    networks:
+      - timed.local
 
   backend:
     build: .
@@ -29,6 +33,8 @@ services:
       - DJANGO_DATABASE_PORT=5432
       - ENV=docker
       - STATIC_ROOT=/var/www/static
+    networks:
+      - timed.local
 
   keycloak:
     image: jboss/keycloak:10.0.1
@@ -44,6 +50,8 @@ services:
       - DB_PASSWORD=timed
       - PROXY_ADDRESS_FORWARDING=true
     command: ["-Dkeycloak.migration.action=import", "-Dkeycloak.migration.provider=singleFile", "-Dkeycloak.migration.file=/etc/keycloak/keycloak-config.json", "-b", "0.0.0.0"]
+    networks:
+      - timed.local
 
   proxy:
     image: nginx:1.17.10-alpine
@@ -51,6 +59,13 @@ services:
       - 80:80
     volumes:
       - ./dev-config/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    networks:
+      timed.local:
+        aliases:
+          - timed.local
 
 volumes:
   dbdata:
+
+networks:
+  timed.local:
