--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -21,4 +21,5 @@ pytest-factoryboy==2.0.3
 pytest-freezegun==0.4.1
 pytest-mock==3.1.1
 pytest-randomly==3.4.0
+requests-mock==1.8.0
 snapshottest==0.5.1
