--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-filter==2.3.0
 django-multiselectfield==0.1.12
 djangorestframework==3.11.0
 djangorestframework-jsonapi[django-filter]==3.1.0
+mozilla-django-oidc==1.2.3
 psycopg2==2.8.5
 pytz==2020.1
 pyexcel-webio==0.1.4
