chore: move configs to setup.cfg, add pytest section

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,3 +31,38 @@ ignore =
 max-line-length = 80
 exclude = migrations snapshots
 max-complexity = 10
+
+[tool:isort]
+skip=migrations,snapshots
+known_first_party=timed
+known_third_party=pytest_factoryboy
+multi_line_output=3
+include_trailing_comma=True
+force_grid_wrap=0
+combine_as_imports=True
+line_length=88
+
+[tool:pytest]
+addopts = -n auto --reuse-db --randomly-seed=1521188766 --randomly-dont-reorganize
+
+[coverage:run]
+source=.
+
+[coverage:report]
+fail_under=100
+exclude_lines =
+    pragma: no cover
+    pragma: todo cover
+    def __str__
+    def __unicode__
+    def __repr__
+omit=
+    */migrations/*
+    */apps.py
+    */admin.py
+    manage.py
+    timed/settings_*.py
+    timed/wsgi.py
+    timed/forms.py
+    setup.py
+show_missing = True
