feat(admin): allow admin login using oidc
Use mozilla-django-oidc server-side authentication flow for admin.
Create custom AdminConfig to use adapted login template starting the
flow.

--- a/dev-config/nginx.conf
+++ b/dev-config/nginx.conf
@@ -14,7 +14,7 @@ server {
   client_max_body_size 50m;
 
   # db-flush may not be exposed in PRODUCTION!
-  location ~ ^/(api|admin|static|db-flush)/ {
+  location ~ ^/(api|admin|oidc|static|db-flush)/ {
     set $backend http://backend;
     proxy_pass $backend;
   }
