chore!: cleanup oidc settings, env vars, readme
Use separate client settings for public and confidential clients.
Because we now use the server-side auth flow as well, we need separate
client settings for the confidential clients.

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,13 @@ combine_as_imports=True
 line_length=88
 
 [tool:pytest]
-addopts = -n auto --reuse-db --randomly-seed=1521188766 --randomly-dont-reorganize
+DJANGO_SETTINGS_MODULE=timed.settings
+addopts = --reuse-db --randomly-seed=1521188767 --randomly-dont-reorganize
+env=
+    DJANGO_OIDC_USERNAME_CLAIM=sub
+filterwarnings =
+    error::DeprecationWarning
+    error::PendingDeprecationWarning
 
 [coverage:run]
 source=.
